Add headline section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,58 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ps-5 pe-5">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="#">John Doe</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse nav justify-content-end" id="navbarSupportedContent">
+            <ul class="nav justify-content-between">
+                <li class="nav-item">
+                  <a class="nav-link link-light active" aria-current="page" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link-light" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link-light" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link"><img src="images/Union.png"/></a>
+                </li>
+              </ul>
+          </div>
+        </div>
+      </nav>
+      <section class="container-fluid bg-dark text-white">
+        <div class="row align-items-center">
+            <div class="col ms-5" style="--bs-breadcrumb-divider: '';">
+                <ul class="row breadcrumb">
+                    <li class= "breadcrumb-item pb-1"><a><img src="images/social-icons-header/github.svg"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/Linkedinicon.svg"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/angellist.svg"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/twitter.svg"/></a></li>
+                    <li class="breadcrumb-item"><a><img src="images/social-icons-header/medium.svg"/></a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <h1>Hey There I'M Alex</h1>
+                    <h6>I'm a Software Developer</h6>
+                    <p>I can help you build a product , 
+                        feature or website Look through 
+                        some of my work and experience!
+                         If you like what you see and have a 
+                         project you need coded, 
+                        don’t hestiate to contact me.
+                    </p>
+                </div>
+            </div>
+            <div class="col pe-0">
+                <img src="images/Illustration-header-desktop.svg"/>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
