Add Work and About section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,137 @@
             </div>
         </div>
       </section>
+      <section class="container pt-5">
+          <div class="row">
+            <div class="col">
+              <h2>My Recent works</h2>
+            </div>
+            <div class="col">
+            <hr/>
+            </div>
+          </div>
+          <div class="row gx-3 gy-3">
+            <div class="col">
+              <img src="images/Work-item-1-desktop.svg" class="card-img-top" alt="Work item 1 desktop"></img>
+            </div>
+              <div class="col">
+                <h5 class="card-title">Multi-Post Stories</h5>
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+                <div>
+                <span class="badge text-bg-light">css</span>
+                <span class="badge text-bg-light">HTML</span>
+                <span class="badge text-bg-light">bootstrap</span>
+                <span class="badge text-bg-light">Ruby</span>
+                </div>
+                <button type="button" class="btn btn-danger">See Project</button>
+              </div>
+          </div>
+          <div class="row gx-3 gy-3">
+              <div class="col">
+                <div class="card bg-transparent text-white">
+                  <img src="images/Card-1-desktop.svg" class="card-img" alt="...">
+                  <div class="card-footer d-grid p-0">
+                    <button type="button" class="btn btn-danger btn-lg">See Project</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card bg-dark text-white d-flex">
+                  <img src="images/Card-2-desktop.svg" class="card-img" alt="...">
+                  <div class="card-img-overlay align-self-end">
+                    <h5 class="card-title">Data Dashboard Healthcare</h5>
+                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                    <div>
+                      <span class="badge text-bg-secondary">html</span>
+                      <span class="badge text-bg-secondary">bootstrap</span>
+                      <span class="badge text-bg-secondary">ruby</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card bg-dark text-white d-flex">
+                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                  <div class="card-img-overlay align-self-end">
+                    <h5 class="card-title">Website Protfolio</h5>
+                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                    <div>
+                      <span class="badge text-bg-secondary">html</span>
+                      <span class="badge text-bg-secondary">bootstrap</span>
+                      <span class="badge text-bg-secondary">ruby</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row gx-3 gy-3">
+              <div class="col">
+                <div class="card bg-dark text-white d-flex">
+                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                  <div class="card-img-overlay align-self-end">
+                    <h5 class="card-title">Website Protfolio</h5>
+                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                    <div>
+                      <span class="badge text-bg-secondary">html</span>
+                      <span class="badge text-bg-secondary">bootstrap</span>
+                      <span class="badge text-bg-secondary">ruby</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card bg-dark text-white d-flex">
+                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                  <div class="card-img-overlay align-self-end">
+                    <h5 class="card-title">Website Protfolio</h5>
+                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                    <div>
+                      <span class="badge text-bg-secondary">html</span>
+                      <span class="badge text-bg-secondary">bootstrap</span>
+                      <span class="badge text-bg-secondary">ruby</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card bg-dark text-white d-flex">
+                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                  <div class="card-img-overlay align-self-end">
+                    <h5 class="card-title">Website Protfolio</h5>
+                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                    <div>
+                      <span class="badge text-bg-secondary">html</span>
+                      <span class="badge text-bg-secondary">bootstrap</span>
+                      <span class="badge text-bg-secondary">ruby</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          </div>
+      </section>
+      <section class="container-fluid pt-5 bg-dark text-white">
+        <div class="row ps-5">
+          <div class="col">
+            <h2>About Me</h2>
+            <p class="card-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+            <div>
+            <span class="badge text-bg-light">css</span>
+            <span class="badge text-bg-light">HTML</span>
+            <span class="badge text-bg-light">bootstrap</span>
+            <span class="badge text-bg-light">Ruby</span>
+            </div>
+            <button type="button" class="btn btn-danger">Get my Resume</button>
+          </div>
+          <div class="col pe-0">
+            <img src="images/illustration-about-me.svg" class="card-img-top" alt="Work item 1 desktop"></img>
+          </div>
+        </div>
+        <div class="row ps-5 pe-5 pt-5">
+          <div class="col">
+            <hr/>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
