--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </nav>
       <section class="container-fluid bg-dark text-white">
         <div class="row align-items-center">
-            <div class="col ms-5" style="--bs-breadcrumb-divider: '';">
-                <ul class="row breadcrumb">
+            <div class="col col-2" style="--bs-breadcrumb-divider: '';">
+                <ul class="row ps-4 breadcrumb">
                     <li class= "breadcrumb-item pb-1"><a><img src="images/social-icons-header/github.svg"/></a></li>
                     <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/Linkedinicon.svg"/></a></li>
                     <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/angellist.svg"/></a></li>
@@ -44,7 +44,7 @@
                     <li class="breadcrumb-item"><a><img src="images/social-icons-header/medium.svg"/></a></li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col col-4">
                 <div class="row">
                     <h1>Hey There I'M Alex</h1>
                     <h6>I'm a Software Developer</h6>
@@ -57,141 +57,210 @@
                     </p>
                 </div>
             </div>
-            <div class="col pe-0">
+            <div class="col pe-0 col-6">
                 <img src="images/Illustration-header-desktop.svg"/>
             </div>
         </div>
       </section>
-      <section class="container pt-5">
-          <div class="row">
-            <div class="col">
+
+      <section class="container py-5 my-5">
+          <div class="row g-4">
+            <div class="col col-3 mb-5">
               <h2>My Recent works</h2>
             </div>
-            <div class="col">
+            <div class="col col-9">
             <hr/>
             </div>
-          </div>
-          <div class="row gx-3 gy-3">
-            <div class="col">
+
+            <div class="col col-6">
               <img src="images/Work-item-1-desktop.svg" class="card-img-top" alt="Work item 1 desktop"></img>
             </div>
-              <div class="col">
+
+              <div class="col col-6">
                 <h5 class="card-title">Multi-Post Stories</h5>
                 <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-                <div>
-                <span class="badge text-bg-light">css</span>
-                <span class="badge text-bg-light">HTML</span>
-                <span class="badge text-bg-light">bootstrap</span>
-                <span class="badge text-bg-light">Ruby</span>
+                <div class="mb-3">
+                <span class="badge text-bg-light border border-dark p-2">css</span>
+                <span class="badge text-bg-light border border-dark p-2">HTML</span>
+                <span class="badge text-bg-light border border-dark p-2">bootstrap</span>
+                <span class="badge text-bg-light border border-dark p-2">Ruby</span>
                 </div>
                 <button type="button" class="btn btn-danger">See Project</button>
               </div>
+
+          <div class="col col-4">
+            <div class="card text-white border border-dark bg-dark d-flex">
+              <img src="images/Card-1-desktop.svg" class="card-img" alt="...">
+              <div class="card-img-overlay d-flex flex-column justify-content-end pb-0 px-0">
+                <button type="button" class="btn btn-danger btn-lg">See Project</button>
+              </div>
+            </div>
           </div>
-          <div class="row gx-3 gy-3">
-              <div class="col">
-                <div class="card bg-transparent text-white">
-                  <img src="images/Card-1-desktop.svg" class="card-img" alt="...">
-                  <div class="card-footer d-grid p-0">
-                    <button type="button" class="btn btn-danger btn-lg">See Project</button>
+
+          <div class="col col-4">
+            <div class="card text-white border border-0">
+              <img src="images/Card-2-desktop.svg" class="card-img" alt="...">
+              <div class="card-img-overlay d-flex flex-column justify-content-end">
+                <h5 class="card-title">Data Dashboard Healthcare</h5>
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <div>
+                  <span class="badge text-bg-secondary p-2">html</span>
+                  <span class="badge text-bg-secondary p-2">bootstrap</span>
+                  <span class="badge text-bg-secondary p-2">ruby</span>
+                </div>
+              </div>
+            </div>
+            </div>
+
+            <div class="col col-4">
+              <div class="card text-white border border-0">
+                <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column justify-content-end">
+                  <h5 class="card-title">Website Protfolio</h5>
+                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                  <div>
+                    <span class="badge text-bg-secondary p-2">html</span>
+                    <span class="badge text-bg-secondary p-2">bootstrap</span>
+                    <span class="badge text-bg-secondary p-2">ruby</span>
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card bg-dark text-white d-flex">
-                  <img src="images/Card-2-desktop.svg" class="card-img" alt="...">
-                  <div class="card-img-overlay align-self-end">
-                    <h5 class="card-title">Data Dashboard Healthcare</h5>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                    <div>
-                      <span class="badge text-bg-secondary">html</span>
-                      <span class="badge text-bg-secondary">bootstrap</span>
-                      <span class="badge text-bg-secondary">ruby</span>
-                    </div>
+            </div>
+
+            <div class="col">
+              <div class="card text-white border border-0">
+                <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column justify-content-end">
+                  <h5 class="card-title">Website Protfolio</h5>
+                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                  <div>
+                    <span class="badge text-bg-secondary p-2">html</span>
+                    <span class="badge text-bg-secondary p-2">bootstrap</span>
+                    <span class="badge text-bg-secondary p-2">ruby</span>
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card bg-dark text-white d-flex">
-                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
-                  <div class="card-img-overlay align-self-end">
-                    <h5 class="card-title">Website Protfolio</h5>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                    <div>
-                      <span class="badge text-bg-secondary">html</span>
-                      <span class="badge text-bg-secondary">bootstrap</span>
-                      <span class="badge text-bg-secondary">ruby</span>
-                    </div>
+            </div>
+
+            <div class="col">
+              <div class="card text-white border border-0">
+                <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column justify-content-end">
+                  <h5 class="card-title">Website Protfolio</h5>
+                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                  <div>
+                    <span class="badge text-bg-secondary p-2">html</span>
+                    <span class="badge text-bg-secondary p-2">bootstrap</span>
+                    <span class="badge text-bg-secondary p-2">ruby</span>
                   </div>
                 </div>
               </div>
-          </div>
-          <div class="row gx-3 gy-3">
-              <div class="col">
-                <div class="card bg-dark text-white d-flex">
-                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
-                  <div class="card-img-overlay align-self-end">
-                    <h5 class="card-title">Website Protfolio</h5>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                    <div>
-                      <span class="badge text-bg-secondary">html</span>
-                      <span class="badge text-bg-secondary">bootstrap</span>
-                      <span class="badge text-bg-secondary">ruby</span>
-                    </div>
+            </div>
+
+            <div class="col">
+              <div class="card text-white border border-0">
+                <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column justify-content-end">
+                  <h5 class="card-title">Website Protfolio</h5>
+                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                  <div>
+                    <span class="badge text-bg-secondary p-2">html</span>
+                    <span class="badge text-bg-secondary p-2">bootstrap</span>
+                    <span class="badge text-bg-secondary p-2">ruby</span>
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card bg-dark text-white d-flex">
-                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
-                  <div class="card-img-overlay align-self-end">
-                    <h5 class="card-title">Website Protfolio</h5>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                    <div>
-                      <span class="badge text-bg-secondary">html</span>
-                      <span class="badge text-bg-secondary">bootstrap</span>
-                      <span class="badge text-bg-secondary">ruby</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card bg-dark text-white d-flex">
-                  <img src="images/Card-3-desktop.svg" class="card-img" alt="...">
-                  <div class="card-img-overlay align-self-end">
-                    <h5 class="card-title">Website Protfolio</h5>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                    <div>
-                      <span class="badge text-bg-secondary">html</span>
-                      <span class="badge text-bg-secondary">bootstrap</span>
-                      <span class="badge text-bg-secondary">ruby</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
+            </div>
           </div>
       </section>
-      <section class="container-fluid pt-5 bg-dark text-white">
-        <div class="row ps-5">
-          <div class="col">
+
+      <section class="container-fluid bg-dark text-white py-5 mt-5">
+        <div class="row">
+          <div class="col col-6 px-5 mx-5 align-self-center">
             <h2>About Me</h2>
-            <p class="card-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-            <div>
-            <span class="badge text-bg-light">css</span>
-            <span class="badge text-bg-light">HTML</span>
-            <span class="badge text-bg-light">bootstrap</span>
-            <span class="badge text-bg-light">Ruby</span>
-            </div>
+            <p class="card-text">Hello I’m a software developer! I can 
+              help you build a product , feature or website Look through 
+              some of my work and experience! If you like what you see and 
+              have a project you need coded, don’t hestiate to contact me.
+            </p>
             <button type="button" class="btn btn-danger">Get my Resume</button>
           </div>
           <div class="col pe-0">
             <img src="images/illustration-about-me.svg" class="card-img-top" alt="Work item 1 desktop"></img>
           </div>
         </div>
-        <div class="row ps-5 pe-5 pt-5">
-          <div class="col">
+        <div class="row mx-5 my-5 justify-content-center">
+          <div class="col me-0">
             <hr/>
           </div>
+        </div>
+        <div class="row mx-5 px-5">
+          <div class="col">
+            <h4><img src="images/about-images/Rectangle55.png" class="me-3"/>Language</h4>
+            <ul style="list-style-type: none;">
+              <li >Javascript</li>
+              <li>Ruby</li>
+              <li>Html</li>
+              <li>Css</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h4><img src="images/about-images/Rectangle56.png" class="me-3"/>Frameworks</h4>
+            <ul style="list-style-type: none;">
+              <li >Bootstrap</li>
+              <li>Ruby on Rails</li>
+              <li>RSPec</li>
+              <li>CapyBara</li>
+              <li>Selenium</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h4 class="pe-3"><img src="images/about-images/Rectangle57.png" class="me-3"/>Skills</h4>
+            <ul style="list-style-type: none;">
+              <li >Codekit</li>
+              <li>Github</li>
+              <li>Codepen</li>
+              <li>Gitlab</li>
+              <li>Terminal</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="container-fluid mt-5">
+        <div class="row mx-5">
+          <div class="col col-5 px-5">
+            <h3>I'm always interested in hearing about new projects,
+               so if you'd like to chat please get in touch.
+            </h3>
+          </div>
+          <div class="col">
+            <form>
+              <div class="row g-3">
+                <div class="col col-12">
+                  <input type="text" class="form-control" placeholder="Full Name"/>
+                </div>
+                <div class="col col-12">
+                  <input type="email" class="form-control" placeholder="Email Address"/>
+                </div>
+                <div>
+                  <textarea class="form-control" placeholder="Hello Mariane. Glad to see you |"></textarea>
+                </div>
+                <div class="col">
+                  <button class="btn btn-danger">Get in Touch</button>
+                </div>
+               
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="row py-3 border border-top mt-5">
+          <div class="col d-flex justify-content-center">
+            <a class="me-4"><img src="images/social-icons-dark/IconGitHub.png"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/IconLinkedin.png"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/Vector.png"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/twitter.png"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/medium.png"/></a>
+          </div> 
         </div>
       </section>
 </body>
