--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col col-4">
                 <div class="row">
-                    <h1>Hey There I'M Alex</h1>
+                    <h1 class="text-danger">Hey There. I'm Alex</h1>
                     <h6>I'm a Software Developer</h6>
                     <p>I can help you build a product , 
                         feature or website Look through 
@@ -177,7 +177,7 @@
       <section class="container-fluid bg-dark text-white py-5 mt-5">
         <div class="row">
           <div class="col col-6 px-5 mx-5 align-self-center">
-            <h2>About Me</h2>
+            <h2 class="text-danger">About Me</h2>
             <p class="card-text">Hello I’m a software developer! I can 
               help you build a product , feature or website Look through 
               some of my work and experience! If you like what you see and 
