--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="CSS/styles.css" rel="stylesheet"/>
     <link href="CSS/bootstrap.min.css" rel="stylesheet"/>
     <script src="JS/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ps-5 pe-5">
-        <div class="container-fluid ">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#">John Doe</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +28,7 @@
                   <a class="nav-link link-light" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link"><img src="images/Union.png"/></a>
+                  <a class="nav-link"><img src="images/Union.png" alt="toggle button"/></a>
                 </li>
               </ul>
           </div>
@@ -73,7 +74,7 @@
             </div>
 
             <div class="col col-6">
-              <img src="images/Work-item-1-desktop.svg" class="card-img-top" alt="Work item 1 desktop"></img>
+              <img src="images/Work-item-1-desktop.svg" class="card-img-top" alt="Work item 1 desktop"/>
             </div>
 
               <div class="col col-6">
@@ -197,7 +198,7 @@
         <div class="row mx-5 px-5">
           <div class="col">
             <h4><img src="images/about-images/Rectangle55.png" class="me-3"/>Language</h4>
-            <ul style="list-style-type: none;">
+            <ul>
               <li >Javascript</li>
               <li>Ruby</li>
               <li>Html</li>
@@ -206,7 +207,7 @@
           </div>
           <div class="col">
             <h4><img src="images/about-images/Rectangle56.png" class="me-3"/>Frameworks</h4>
-            <ul style="list-style-type: none;">
+            <ul>
               <li >Bootstrap</li>
               <li>Ruby on Rails</li>
               <li>RSPec</li>
@@ -216,7 +217,7 @@
           </div>
           <div class="col">
             <h4 class="pe-3"><img src="images/about-images/Rectangle57.png" class="me-3"/>Skills</h4>
-            <ul style="list-style-type: none;">
+            <ul>
               <li >Codekit</li>
               <li>Github</li>
               <li>Codepen</li>
@@ -246,7 +247,7 @@
                   <textarea class="form-control" placeholder="Hello Mariane. Glad to see you |"></textarea>
                 </div>
                 <div class="col">
-                  <button class="btn btn-danger">Get in Touch</button>
+                  <button class="btn btn-danger" type="submit">Get in Touch</button>
                 </div>
                
               </div>
