--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="row align-items-center">
             <div class="col col-2" style="--bs-breadcrumb-divider: '';">
                 <ul class="row ps-4 breadcrumb">
-                    <li class= "breadcrumb-item pb-1"><a><img src="images/social-icons-header/github.svg"/></a></li>
-                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/Linkedinicon.svg"/></a></li>
-                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/angellist.svg"/></a></li>
-                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/twitter.svg"/></a></li>
-                    <li class="breadcrumb-item"><a><img src="images/social-icons-header/medium.svg"/></a></li>
+                    <li class= "breadcrumb-item pb-1"><a><img src="images/social-icons-header/github.svg" alt="social icon"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/Linkedinicon.svg" alt="social icon"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/angellist.svg" alt="social icon"/></a></li>
+                    <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/twitter.svg" alt="social icon"/></a></li>
+                    <li class="breadcrumb-item"><a><img src="images/social-icons-header/medium.svg" alt="social icon"/></a></li>
                 </ul>
             </div>
             <div class="col col-4">
@@ -187,7 +187,7 @@
             <button type="button" class="btn btn-danger">Get my Resume</button>
           </div>
           <div class="col pe-0">
-            <img src="images/illustration-about-me.svg" class="card-img-top" alt="Work item 1 desktop"></img>
+            <img src="images/illustration-about-me.svg" class="card-img-top" alt="Work item 1 desktop"/>
           </div>
         </div>
         <div class="row mx-5 my-5 justify-content-center">
