Remove  inline style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
       <section class="container-fluid bg-dark text-white">
         <div class="row align-items-center">
-            <div class="col col-2" style="--bs-breadcrumb-divider: '';">
+            <div class="col col-2">
                 <ul class="row ps-4 breadcrumb">
                     <li class= "breadcrumb-item pb-1"><a><img src="images/social-icons-header/github.svg" alt="social icon"/></a></li>
                     <li class="breadcrumb-item pb-1"><a><img src="images/social-icons-header/Linkedinicon.svg" alt="social icon"/></a></li>
