--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="col pe-0 col-6">
-                <img src="images/Illustration-header-desktop.svg"/>
+                <img src="images/Illustration-header-desktop.svg" alt="illustration"/>
             </div>
         </div>
       </section>
