--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
         <div class="row mx-5 px-5">
           <div class="col">
-            <h4><img src="images/about-images/Rectangle55.png" class="me-3"/>Language</h4>
+            <h4><img src="images/about-images/Rectangle55.png" alt="icon" class="me-3"/>Language</h4>
             <ul>
               <li >Javascript</li>
               <li>Ruby</li>
@@ -206,7 +206,7 @@
             </ul>
           </div>
           <div class="col">
-            <h4><img src="images/about-images/Rectangle56.png" class="me-3"/>Frameworks</h4>
+            <h4><img src="images/about-images/Rectangle56.png" alt="icon2" class="me-3"/>Frameworks</h4>
             <ul>
               <li >Bootstrap</li>
               <li>Ruby on Rails</li>
@@ -216,7 +216,7 @@
             </ul>
           </div>
           <div class="col">
-            <h4 class="pe-3"><img src="images/about-images/Rectangle57.png" class="me-3"/>Skills</h4>
+            <h4 class="pe-3"><img src="images/about-images/Rectangle57.png" alt="icon3" class="me-3"/>Skills</h4>
             <ul>
               <li >Codekit</li>
               <li>Github</li>
