--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div class="col col-4">
             <div class="card text-white border border-dark bg-dark d-flex">
-              <img src="images/Card-1-desktop.svg" class="card-img" alt="...">
+              <img src="images/Card-1-desktop.svg" class="card-img" alt="card img">
               <div class="card-img-overlay d-flex flex-column justify-content-end pb-0 px-0">
                 <button type="button" class="btn btn-danger btn-lg">See Project</button>
               </div>
@@ -256,11 +256,11 @@
         </div>
         <div class="row py-3 border border-top mt-5">
           <div class="col d-flex justify-content-center">
-            <a class="me-4"><img src="images/social-icons-dark/IconGitHub.png"/></a>
-            <a class="me-4"><img src="images/social-icons-dark/IconLinkedin.png"/></a>
-            <a class="me-4"><img src="images/social-icons-dark/Vector.png"/></a>
-            <a class="me-4"><img src="images/social-icons-dark/twitter.png"/></a>
-            <a class="me-4"><img src="images/social-icons-dark/medium.png"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/IconGitHub.png" alt="social 1"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/IconLinkedin.png" alt="social 2"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/Vector.png" alt="social 3"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/twitter.png" alt="social 4"/></a>
+            <a class="me-4"><img src="images/social-icons-dark/medium.png" alt="social 5"/></a>
           </div> 
         </div>
       </section>
